--- a/Readme
+++ b/Readme
@@ -88,7 +88,8 @@ You can now visit your app in your browser by running heroku open command on the
 
 
 
-
+Vous avez une expérience sur les algues ou une recette à partager, écrivez-la ci-dessous et envoyez le message à l’équipe de rédaction qui le mettra très certainement en ligne et qui vous contactera. 
+Merci de votre aide.
 
 
 
